--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-commerce",
-  "homepage": "https://ridoy-mondol.github.io/ecommerce/",
+  "homepage": "https://ridoy-mondol.github.io/e-commerce/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
